lib/libui/snapshots/libui__history_cell__tests__active_mcp_tool_call_snapshot.snap
---
source: lib/libui/history_cell.rs
expression: rendered
---
• Calling search.find_docs({"query":"ratatui styling","limit":3})
