lib/libui/snapshots/libui__history_cell__tests__coalesced_reads_dedupe_names.snap
---
source: lib/libui/history_cell.rs
expression: rendered
---
• Explored
  └ Read auth.rs, shimmer.rs
