lib/libui/snapshots/libui__history_cell__tests__coalesces_reads_across_multiple_calls.snap
---
source: lib/libui/history_cell.rs
expression: rendered
---
• Explored
  └ Search shimmer_spans
    Read shimmer.rs, status_indicator_widget.rs
