lib/libui/snapshots/libui__history_cell__tests__coalesces_sequential_reads_within_one_call.snap
---
source: lib/libui/history_cell.rs
expression: rendered
---
• Explored
  └ Search shimmer_spans
    Read shimmer.rs
    Read status_indicator_widget.rs
