lib/libui/snapshots/libui__history_cell__tests__completed_mcp_tool_call_error_snapshot.snap
---
source: lib/libui/history_cell.rs
expression: rendered
---
• Called search.find_docs({"query":"ratatui styling","limit":3})
  └ Error: network timeout
