lib/libui/snapshots/libui__history_cell__tests__completed_mcp_tool_call_wrapped_outputs_snapshot.snap
---
source: lib/libui/history_cell.rs
expression: rendered
---
• Called
  └ metrics.get_nearby_metric({"query":"
        very_long_query_that_needs_wrapp
        ing_to_display_properly_in_the_h
        istory","limit":1})
    Line one of the response, which is
        quite long and needs wrapping.
    Line two continues the response with
        more detail.
