lib/libui/snapshots/libui__history_cell__tests__mcp_tools_output_masks_sensitive_values.snap
---
source: lib/libui/history_cell.rs
expression: rendered
---
/mcp

🔌  MCP Tools

  • docs
    • Status: enabled
    • Command: docs-server
    • Env: TOKEN=*****, APP_TOKEN=*****
    • Tools:
      - list
    • Resources: (none)
    • Resource templates: (none)

  • http
    • Status: enabled
    • URL: https://example.com/mcp
    • HTTP headers: Authorization=*****
    • Env HTTP headers: X-API-Key=API_KEY_ENV
    • Tools:
      - ping
    • Resources: (none)
    • Resource templates: (none)
