lib/libui/snapshots/libui__history_cell__tests__multiline_command_both_lines_wrap_with_correct_prefixes.snap
---
source: lib/libui/history_cell.rs
expression: rendered
---
• Ran first_token_is_long_en
  │ ough_to_wrap
  │ second_token_is_also_lon
  │ … +1 lines
  └ (no output)
